salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/CS_Staffing_Alert__e.object-meta.xml
<CustomObject>
    <description>Platform Event fired when an Opportunity reaches Stage 4 (Proposal) or Stage 5 (Negotiation). Used to trigger CS staffing notifications via GTM Brain Slack integration.</description>
    <label>CS Staffing Alert</label>
    <pluralLabel>CS Staffing Alerts</pluralLabel>
</CustomObject>