salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Salesforce ID of the Account</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>