salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Name of the Account associated with this Opportunity</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>