salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Annual Contract Value of the Opportunity</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>