salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Salesforce ID of the Opportunity</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>