salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Name of the Opportunity</description>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>