salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <description>Salesforce User ID of the Opportunity Owner</description>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>