salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Product Line(s) associated with this Opportunity</description>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>