salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Current stage of the Opportunity (Stage 4 - Proposal or Stage 5 - Negotiation)</description>
    <label>Stage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>