salesforce/force-app/main/default/objects/CS_Staffing_Alert__e/fields/Target_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Sign_Date__c</fullName>
    <description>Target sign/close date for the Opportunity</description>
    <label>Target Sign Date</label>
    <type>Date</type>
</CustomField>